cluster/apps/affine/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: affine
    app.kubernetes.io/version: 2026.1.11-canary.904
  name: affine
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: affine
  template:
    metadata:
      labels:
        app.kubernetes.io/name: affine
        app.kubernetes.io/version: 2026.1.11-canary.904
    spec:
      automountServiceAccountToken: false
      containers:
      - command:
        - /bin/sh
        - -c
        - /scripts/entrypoint.sh node ./dist/main.js
        image: ghcr.io/toeverything/affine:2026.1.11-canary.904
        name: affine
        ports:
        - containerPort: 3010
          name: affine-ui
        volumeMounts:
        - mountPath: /root/.affine/config
          name: conf-volume
        - mountPath: /root/.affine/storage
          name: data-volume
        - mountPath: /scripts/entrypoint.sh
          subPath: entrypoint.sh
          name: entrypoint-volume
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
      volumes:
      - name: conf-volume
        persistentVolumeClaim:
          claimName: config-pvc
      - name: data-volume
        persistentVolumeClaim:
          claimName: data-pvc
      - name: entrypoint-volume
        configMap:
          name: affine-configmap
          defaultMode: 511
