cluster/apps/affine/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    netbird.io/expose: "true"
    netbird.io/groups: cluster-services
  labels:
    app.kubernetes.io/name: affine
    app.kubernetes.io/version: 2026.1.11-canary.904
  name: affine
spec:
  selector:
    app.kubernetes.io/name: affine
  ports:
  - name: http-affine
    port: 3010
    targetPort: 3010
